create styling for tasks

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <div class="display__timer">25:00</div>
         <button class="display__start-stop">START!</button>
       </div>
+
       <div class="main__tasks tasks">
-        <h3 class="tasks__title"></h3>
-        <button class="tasks__add"></button>
+        <h3 class="tasks__title">Zadania do wykonania</h3>
+        <button class="tasks__add">Dodaj zadanie</button>
       </div>
     </main>
     <section class="overview">
