create styling for section with a description

--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
         repudiandae nemo ex odit optio impedit eum sequi voluptatibus ut amet
         saepe molestiae reiciendis, magnam modi assumenda? Impedit provident,
         necessitatibus qui maiores facere est architecto ut explicabo corporis
-        cum voluptatibus error magni vel atque. Soluta ea in, magnam nostrum,
-        consequuntur odit commodi iste similique explicabo consectetur
-        voluptates iure, fuga error sequi dolor eveniet! Illum hic rem et
-        accusantium odio corporis molestias saepe eligendi eum?
+        cum voluptatibus error magni vel atque.
       </p>
       <h2 class="overview__title">Jak korzystać z pomodoro</h2>
       <ol class="overview__list list">
-        <li class="list__list-item"></li>
-        <li class="list__list-item"></li>
-        <li class="list__list-item"></li>
-        <li class="list__list-item"></li>
-        <li class="list__list-item"></li>
+        <li class="list__list-item">Lorem, ipsum dolor.</li>
+        <li class="list__list-item">Lorem, ipsum dolor.</li>
+        <li class="list__list-item">Lorem, ipsum dolor.</li>
+        <li class="list__list-item">Lorem, ipsum dolor.</li>
+        <li class="list__list-item">Lorem, ipsum dolor.</li>
       </ol>
     </section>
     <footer>&copy Stanisław Szarapka 2021</footer>
