create styling for footer

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         <li class="list__list-item">Lorem, ipsum dolor.</li>
       </ol>
     </section>
-    <footer>&copy Stanisław Szarapka 2021</footer>
+    <footer class="footer">&copy Stanisław Szarapka 2021</footer>
   </body>
 </html>
