create dom elements class

--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
           />
 
           <button class="header__settings">
-            <i class="fas fa-cog"></i>Settings
+            <i class="fas fa-cog"></i>Ustawienia
           </button>
         </header>
         <main class="main">
           <div class="main__display display">
             <div class="display__tabs tabs">
-              <button class="tabs__tab tabs__tab--active">Pomodoro</button>
-              <button class="tabs__tab">Krótka przerwa</button>
+              <button class="tabs__tab tabs__tab--active pomodoro">
+                Pomodoro
+              </button>
+              <button class="tabs__tab short-break">Krótka przerwa</button>
               <div class="display__tabs--line"></div>
             </div>
             <div class="display__timer">25:00</div>
