set working directory for creating visual effects in JS

--- a/index.html
+++ b/index.html
@@ -116,5 +116,7 @@
     </section>
 
     <footer class="footer">&copy Stanisław Szarapka 2021</footer>
+
+    <script type="module" src="main.js"></script>
   </body>
 </html>
