create and style settings popup

--- a/index.html
+++ b/index.html
@@ -36,6 +36,37 @@
                         <i class="fas fa-cog"></i>Ustawienia
                     </button>
                 </header>
+                <div class="settings">
+                    <i class="fas fa-times"></i>
+                    <div class="settings__auto-start">
+                        <p>Automatyczny start</p>
+                        <div class="dark-mode__slider slider"></div>
+                    </div>
+                    <div class="settings__dark-mode">
+                        <p>Ciemny motyw</p>
+
+                        <div
+                            class="dark-mode__slider slider slider--active"
+                        ></div>
+                    </div>
+                    <div class="settings__sound">
+                        <p>Dzwiek alarmu</p>
+                        <div class="select-container">
+                            <div class="sound__select">Dzwonek 1</div>
+                            <i class="fas fa-angle-down"></i>
+                            <div class="sound__menu">
+                                <div class="menu-item">Dzwonek 1</div>
+                                <div class="menu-item">Dzwonek 2</div>
+                                <div class="menu-item">Dzwonek 3</div>
+                                <div class="menu-item">Dzwonek 4</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="settings__sound-volume">
+                        <p>Glosnosc</p>
+                        <input type="range" class="sound-volume__range" />
+                    </div>
+                </div>
                 <main class="main">
                     <div class="main__display display">
                         <div class="display__tabs tabs">
