--- a/index.html
+++ b/index.html
@@ -32,39 +32,58 @@
                         class="header__logo"
                     />
 
-                    <button class="header__settings">
-                        <i class="fas fa-cog"></i>Ustawienia
+                    <button class="header__settings close">
+                        <i class="fas fa-cog close"></i>Ustawienia
                     </button>
                 </header>
-                <div class="settings">
+                <div class="settings close">
                     <i class="fas fa-times"></i>
-                    <div class="settings__auto-start">
-                        <p>Automatyczny start</p>
-                        <div class="dark-mode__slider slider"></div>
-                    </div>
-                    <div class="settings__dark-mode">
-                        <p>Ciemny motyw</p>
 
-                        <div
-                            class="dark-mode__slider slider slider--active"
-                        ></div>
+                    <div class="settings__auto-start close">
+                        <p class="close">Automatyczny start</p>
+                        <div class="auto-start__slider slider close">
+                            <div class="slider__circle close"></div>
+                        </div>
                     </div>
-                    <div class="settings__sound">
-                        <p>Dzwiek alarmu</p>
-                        <div class="select-container">
-                            <div class="sound__select">Dzwonek 1</div>
-                            <i class="fas fa-angle-down"></i>
+
+                    <div class="settings__dark-mode close">
+                        <p clcass="close">Ciemny motyw</p>
+
+                        <div class="dark-mode__slider slider close">
+                            <div class="slider__circle close"></div>
+                        </div>
+                    </div>
+
+                    <div class="settings__sound close">
+                        <p class="close">Dzwiek alarmu</p>
+                        <div class="select-container close">
+                            <div class="sound__select close">Dzwonek 1</div>
+                            <i class="fas fa-angle-down close"></i>
                             <div class="sound__menu">
-                                <div class="menu-item">Dzwonek 1</div>
-                                <div class="menu-item">Dzwonek 2</div>
-                                <div class="menu-item">Dzwonek 3</div>
-                                <div class="menu-item">Dzwonek 4</div>
+                                <div
+                                    class="menu-item close"
+                                    data-source="../sounds/sound1.mp3"
+                                >
+                                    Dzwonek 1
+                                </div>
+                                <div
+                                    data-source="../sounds/sound2.mp3"
+                                    class="menu-item close"
+                                >
+                                    Dzwonek 2
+                                </div>
+                                <div
+                                    data-source="../sounds/sound3.mp3"
+                                    class="menu-item close"
+                                >
+                                    Dzwonek 3
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="settings__sound-volume">
-                        <p>Glosnosc</p>
-                        <input type="range" class="sound-volume__range" />
+                    <div class="settings__sound-volume close">
+                        <p class="close">Glosnosc</p>
+                        <input type="range" class="sound-volume__range close" />
                     </div>
                 </div>
                 <main class="main">
