--- a/index.html
+++ b/index.html
@@ -114,17 +114,6 @@
                         <button class="tasks__add">
                             <i class="fas fa-plus-circle"></i>Dodaj zadanie
                         </button>
-                        <div class="tasks__item">
-                            <!-- <i class="fas fa-check-square"></i> -->
-                            <div class="tasks-container-1">
-                                <i class="far fa-square"></i>
-                                <p class="tasks__name">Nazwa zadania</p>
-                            </div>
-                            <div class="tasks-container-2">
-                                <div class="tasks__pomodoros-number">0/1</div>
-                                <i class="fas fa-edit"></i>
-                            </div>
-                        </div>
                         <div class="tasks__form form">
                             <input
                                 type="text"
@@ -142,11 +131,23 @@
                                     min="1"
                                 />
                                 <div class="form__action">
-                                    <button class="form__cancel">Anuluj</button>
+                                    <button class="form__cancel">Usun</button>
                                     <button class="form__save">Zapisz</button>
                                 </div>
                             </div>
                         </div>
+                        <div class="tasks__list"></div>
+                        <!-- <div class="tasks__item">
+                            <i class="fas fa-check-square"></i>
+                            <div class="tasks-container-1">
+                                <i class="far fa-square"></i>
+                                <p class="tasks__name">Nazwa zadania</p>
+                            </div>
+                            <div class="tasks-container-2">
+                                <div class="tasks__pomodoros-number">0/1</div>
+                                <i class="fas fa-edit"></i>
+                            </div>
+                        </div> -->
                     </div>
                 </main>
             </div>
