improve description styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
     <head>
+        <!-- Description: https://interviewme.pl/blog/technika-pomodoro -->
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,7 +48,7 @@
                     </div>
 
                     <div class="settings__dark-mode close">
-                        <p clcass="close">Ciemny motyw</p>
+                        <p clcass="close">Ciemny motyw (w budowie)</p>
 
                         <div class="dark-mode__slider slider close">
                             <div class="slider__circle close"></div>
@@ -158,24 +159,58 @@
                 pomodoro?
             </h2>
             <p class="overview__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Reprehenderit exercitationem provident iure excepturi dolor
-                deserunt obcaecati repudiandae nemo ex odit optio impedit eum
-                sequi voluptatibus ut amet saepe molestiae reiciendis, magnam
-                modi assumenda? Impedit provident, necessitatibus qui maiores
-                facere est architecto ut explicabo corporis cum voluptatibus
-                error magni vel atque.
+                Technika Pomodoro (pomodoro technique) to metoda, która pozwala
+                <span class="color">organizować</span> czas pracy i nauki oraz
+                <span class="color">zarządzać</span> obowiązkami. Rekwizytem
+                kojarzonym z techniką Pomodoro jest budzik (timer), który
+                odlicza 25-minutowe odcinki czasu pracy (pomodoros) oraz krótkie
+                przerwy. Jeśli masz do zrobienia kilka rzeczy i bezskutecznie
+                próbujesz skupić się na pracy, ta metoda może Cię uratować.
+                Męczące uczucie marnowania czasu odejdzie w
+                <span class="color">niepamięć</span>, jeśli stworzysz sobie
+                harmonogram zadań i będziesz się go trzymał . To niewykonalne?
+                Właśnie dlatego technika Pomodoro narzuca magiczne
+                <span class="color">25 minut</span>, które są według autora
+                metody maksymalnym czasem, w którym
+                <span class="color">bez przemęczenia</span> możesz pracować
+                intelektualnie. Po tym należy Ci się
+                <span class="color">przerwa</span>.
+            </p>
+            <p class="overview__description">
+                Technikę Pomodoro wymyślił w latach 80. Francesco Cirillo.
+                Włocha zainspirował… kuchenny czasomierz w kształcie pomidora,
+                którego używał podczas studiów (pomodoro to po włosku pomidor).
             </p>
             <h2 class="overview__title">
                 <span class="overview__title--color">J</span>ak korzystac z
                 pomodoro?
             </h2>
             <ol class="overview__list list">
-                <li class="list__list-item">Lorem, ipsum dolor.</li>
-                <li class="list__list-item">Lorem, ipsum dolor.</li>
-                <li class="list__list-item">Lorem, ipsum dolor.</li>
-                <li class="list__list-item">Lorem, ipsum dolor.</li>
-                <li class="list__list-item">Lorem, ipsum dolor.</li>
+                <li class="list__list-item">
+                    Kliknij <span class="color">dodaj zadanie</span>
+                </li>
+                <li class="list__list-item">
+                    Wpisz <span class="color">nazwę</span> i określ
+                    <span class="color">ile 25 minutowych bloków</span> zajmie
+                    ci wykonanie zadania
+                </li>
+                <li class="list__list-item">
+                    Dodaj w ten sposób
+                    <span class="color">wszystkie zadania</span> jakie masz do
+                    wykonania
+                </li>
+                <li class="list__list-item">
+                    Kliknij <span class="color">start</span> i skup się w
+                    <span class="color">100%</span>
+                    na zadaniu
+                </li>
+                <li class="list__list-item">
+                    Po <span class="color">25</span> minutach czas na
+                    <span class="color">5</span> minut przerwy
+                </li>
+                <li class="list__list-item">
+                    <span class="color">Powtarzaj</span> aż ukończysz zadania
+                </li>
             </ol>
         </section>
 
