improve css (testing on an actual device)

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 display__start-stop display__start-stop--active
                             "
                         >
-                            START!
+                            <p>START!</p>
                         </button>
                     </div>
 
