--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="settings__dark-mode close">
-                        <p clcass="close">Ciemny motyw (w budowie)</p>
+                        <p clcass="close">Ciemny motyw</p>
 
                         <div class="dark-mode__slider slider close">
                             <div class="slider__circle close"></div>
@@ -58,26 +58,26 @@
                     <div class="settings__sound close">
                         <p class="close">Dzwiek alarmu</p>
                         <div class="select-container close">
-                            <div class="sound__select close">Dzwonek 1</div>
+                            <div class="sound__select close">Stary telefon</div>
                             <i class="fas fa-angle-down close"></i>
                             <div class="sound__menu">
                                 <div
                                     class="menu-item close"
                                     data-source="../sounds/sound1.mp3"
                                 >
-                                    Dzwonek 1
+                                    Stary telefon
                                 </div>
                                 <div
                                     data-source="../sounds/sound2.mp3"
                                     class="menu-item close"
                                 >
-                                    Dzwonek 2
+                                    Ptak
                                 </div>
                                 <div
                                     data-source="../sounds/sound3.mp3"
                                     class="menu-item close"
                                 >
-                                    Dzwonek 3
+                                    Trabka
                                 </div>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                         <input type="range" class="sound-volume__range close" />
                     </div>
                 </div>
-                <main class="main">
+                <main class="main dark-mode">
                     <div class="main__display display">
                         <div class="display__tabs tabs">
                             <button
